# Intel-AMX-experiment

./: CMakeLists.txt  README.md
cmake/: test.cmake
include/amx/: amx.h  utils.h
src/: amx.cpp  utils.cpp
test/: test_amx.cpp
